# arm_wkspc

./: .gitignore  Notes.md  README.md  baxter.sh  install_scooter.txt  scooter-notes.txt  usb_enumeration.txt
DOTrviz/: cam_reg_test.rviz  default.rviz  interactive_dual_cam.rviz  interactive_tf_calibration.rviz  persistent_settings  scooter_arm.rviz  three_camera.rviz
doc/: Calibration.md  Experiment.md  NewNotes.md  README-from-active-sensing2.md
scripts/: install.bash
src/: .rosinstall  setup.sh  workspace.rosinstall
src/active_sensing/: CMakeLists.txt  link.txt  package.xml
src/active_sensing/data/: ActiveLandscape-2016-04-25.mat  ScoresToMat.m  active_landscape.fig  scores.txt  scoresPhi.txt  scoresTheta.txt
src/active_sensing/launch/: active_sensing.launch
src/active_sensing/openrave/: baxter_arm.left.rounded.dae  baxter_ik.xml  baxter_left_ikfast_solver.cpp  ikfast_test.py  table.xml
src/active_sensing/rviz/: active_sensing_no_object_recognition.rviz
src/active_sensing/scripts/: active_sensing_driving.py  active_sensing_joystick.py  arm.py  cloud_proxy.py  cloud_proxy_asus.py  cloud_proxy_infinitam.py  cloud_proxy_merged.py  cloud_proxy_structure.py  grasp.py  grasp_planning_node.py  grasp_selection.py  laser_detector.py  motion_planner.py  object_selection_gui.py  plot.py  print_joint_angles.py  user_keyboard_control.py  view_planner.py
src/active_sensing/scripts/misc/: active_sensing_fixed.py  add_sensor_frame.py  num2obj.py
src/agile_grasp2/: CMakeLists.txt  package.xml
src/agile_grasp2/include/agile_grasp2/: antipodal.h  cloud_camera.h  finger_hand.h  frame_estimator.h  grasp_detector.h  grasp_hypothesis.h  hand_search.h  handle_search.h  importance_sampling.h  learning.h  plot.h
src/agile_grasp2/launch/: file_detect_grasps.launch  file_importance_sampling.launch  fixed_detect_grasps_active.launch  generate_training_data.launch  grasp_tracking_detect_grasps_active.launch  grasp_tracking_detect_grasps_passive.launch  optical_flow_detect_grasps.launch
src/agile_grasp2/msg/: CloudIndexed.msg  CloudSamples.msg  CloudSized.msg
src/agile_grasp2/src/agile_grasp2/: antipodal.cpp  (+11 more)
src/baxter/: baxter.sh
src/baxter_common/single_description/: CMakeLists.txt  package.xml
src/baxter_examples/scripts/: gripper_joystick.py  gripper_keyboard.py  joint_position_joystick.py  joint_position_keyboard.py  joint_velocity_wobbler.py
src/baxter_interface/scripts/: joint_trajectory_action_server.py
src/baxter_tools/scripts/: tuck_arms.py
src/baxter_ws/: README
src/infinitam/: CMakeLists.txt  package.xml
src/infinitam/calibration/: camboard.txt  structure.txt
src/infinitam/launch/: infinitam.launch  simple.launch
src/infinitam/msg/: volume.msg
src/infinitam/src/: infinitam.cpp
src/scooter_ui/: object_setup.py
src/scooter_ui/baxter_xacro/: baxter.urdf.xacro  dv_arm.urdf.xacro  dv_body.urdf.xacro  dv_itb.urdf.xacro  dv_props_global.urdf.xacro  dv_props_real.urdf.xacro  generate_new_xml-cut.sh  single.urdf.xacro  single_body.urdf.xacro
src/scooter_ui/devel/: .catkin  .rosinstall
src/scooter_ui/launch/: agile_grasp_2.launch  dual_camera.launch  scg_camera.launch  scg_filter_cloud.launch  scg_find_grasp.launch  scg_kinematics.launch  scg_laser_detect.launch  scg_select_grasp.launch  scg_static_transforms.launch  single_cam_grasper.launch
src/scooter_ui/rviz/: grasper.rviz
src/scooter_ui/src/qrcode_detection/: CMakeLists.txt  package.xml
src/scooter_ui/src/qrcode_detection/launch/: qrcode_detection.launch
src/scooter_ui/src/qrcode_detection/msg/: QRCode.msg  QRCodes.msg
src/scooter_ui/src/qrcode_detection/src/: .gitignore  MyFilter.py  MyRate.py  PointCloudTools.py  SharedBufferValue.py  qr_code_detection.py
(+141 files in other folders)
