<?xml version="1.0"?>
<package>
  <name>infinitam</name>
  <version>0.0.0</version>
  <description>Uses InfiniTAM to publish volume data.</description>
  
  <maintainer email="mgualti@ccs.neu.edu">mgualti</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export></export>
</package>
